[tool.poetry]
name = "objectinsightmasker"
version = "0.1.0"
description = ""
authors = ["vaibhavsanap <vabhi42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
torch = "^2.2.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
ultralytics = "^8.1.26"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
